feat: use ConfigMap instead of env variables

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,8 +17,15 @@ spec:
           image: amirjfr/kub-data-demo
           imagePullPolicy: Always
           env: # note you could achive the same in docker but we are doing it in k8s deployment this time
+            # approach 1:
+            # - name: STORY_FOLDER
+            #   value: 'story'
+            # approach 2:
             - name: STORY_FOLDER
-              value: 'story'
+              valueFrom:
+                configMapKeyRef:
+                  name: data-store-env
+                  key: folder
           volumeMounts:
             - mountPath: /app/story
               name: story-volume
